--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
         <title>Landing Page Project</title>
     </head>
     <body>
-        <div class="header">
-            <div class="logo">Header Logo</div>
-            <div class="links">
-                <ul>
-                    <li><a href="/">header link one</a></li>
-                    <li><a href="/">header link two</a></li>
-                    <li><a href="/">header link three</a></li>
-                </ul>
+        <div class="hero">
+            <div class="header">
+                <div class="logo">Header Logo</div>
+                <div class="links">
+                    <ul>
+                        <li><a href="/">header link one</a></li>
+                        <li><a href="/">header link two</a></li>
+                        <li><a href="/">header link three</a></li>
+                    </ul>
+                </div>
             </div>
+        
         </div>
     </body>
 </html>
