Add sections to html and lorem

--- a/index.html
+++ b/index.html
@@ -17,7 +17,26 @@
                     </ul>
                 </div>
             </div>
-        
+            <div class="first">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, totam esse dolorem illo repudiandae, aspernatur blanditiis ratione quo ullam asperiores optio, ipsa atque. Harum, vel? Est iure libero reprehenderit ipsum qui doloremque accusamus nulla corrupti corporis. Consequatur quis temporibus repellendus alias! Laborum vitae consectetur voluptatibus eos fuga, quas enim maiores, reiciendis culpa, nostrum inventore. Maiores rem fuga velit perspiciatis totam. Sequi architecto corrupti magnam, at, praesentium ratione doloremque accusantium, fuga ut itaque repudiandae cupiditate maxime dolores nesciunt autem? Nihil, possimus.
+
+            </div>
+        </div>
+        <div class="info">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis expedita quis assumenda accusantium reprehenderit repellat ad voluptates dignissimos veniam, magnam dolor in vitae!
+
+        </div>
+        <div class="quote">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illum ullam repudiandae, officia molestiae veritatis voluptatum, eaque itaque amet esse eum dolores ratione id quam consequuntur, eius fuga maiores atque.
+
+        </div>
+        <div class="call">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam autem tenetur ducimus eum debitis sit voluptate reprehenderit consequatur minima incidunt nihil neque quaerat excepturi aliquam vel beatae consequuntur, iure officiis!
+
+        </div>
+        <div class="footer">
+            Copyright c The Odin Project 2021
+
         </div>
     </body>
 </html>
