Add structure to first section in hero

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                 </div>
             </div>
             <div class="first">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, totam esse dolorem illo repudiandae, aspernatur blanditiis ratione quo ullam asperiores optio, ipsa atque. Harum, vel? Est iure libero reprehenderit ipsum qui doloremque accusamus nulla corrupti corporis. Consequatur quis temporibus repellendus alias! Laborum vitae consectetur voluptatibus eos fuga, quas enim maiores, reiciendis culpa, nostrum inventore. Maiores rem fuga velit perspiciatis totam. Sequi architecto corrupti magnam, at, praesentium ratione doloremque accusantium, fuga ut itaque repudiandae cupiditate maxime dolores nesciunt autem? Nihil, possimus.
-
+                <h1>Lorem ipsum, dolor sit amet consectetur</h1> 
+                <p>adipisicing elit. Quos, totam esse dolorem illo repudiandae, aspernatur blanditiis ratione quo ullam asperiores optio, ipsa</p>
+                <button href="/">Sign up</button>
+                <div class="image">this is a placeholder for an image</div>
             </div>
         </div>
         <div class="info">
