Add structure to info section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
             </div>
         </div>
         <div class="info">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis expedita quis assumenda accusantium reprehenderit repellat ad voluptates dignissimos veniam, magnam dolor in vitae!
+            <h2>Lorem, ipsum dolor sit amet consectetur</h2>
+            <div class="item">test</div>
+            <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+            <div class="item">test</div>
+            <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+            <div class="item">test</div>
+            <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+            <div class="item">test</div>
+            <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
 
         </div>
         <div class="quote">
