Add structure to quote section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
         </div>
         <div class="quote">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illum ullam repudiandae, officia molestiae veritatis voluptatum, eaque itaque amet esse eum dolores ratione id quam consequuntur, eius fuga maiores atque.
+            <div class="quote-text">ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illum ullam repudiandae, officia molestiae veritatis voluptatum, eaque itaque amet esse eum</div>
+            <div class="author">  dolores ratione id quam consequuntur, eius fuga maiores atque.</div>
 
         </div>
         <div class="call">
