--- a/index.html
+++ b/index.html
@@ -26,14 +26,22 @@
         </div>
         <div class="info">
             <h2>Lorem, ipsum dolor sit amet consectetur</h2>
-            <div class="item">test</div>
-            <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
-            <div class="item">test</div>
-            <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
-            <div class="item">test</div>
-            <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
-            <div class="item">test</div>
-            <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+            <div class="item">
+                <div class="square">test</div>
+                <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+            </div>
+            <div class="item">
+                <div class="square">test</div>
+                <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+            </div>
+            <div class="item">
+                <div class="square">test</div>
+                <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+            </div>
+            <div class="item">
+                <div class="square">test</div>
+                <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+            </div>
 
         </div>
         <div class="quote">
