Add structure to call to action

--- a/index.html
+++ b/index.html
@@ -50,8 +50,15 @@
 
         </div>
         <div class="call">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam autem tenetur ducimus eum debitis sit voluptate reprehenderit consequatur minima incidunt nihil neque quaerat excepturi aliquam vel beatae consequuntur, iure officiis!
-
+            <div class="rectangle">
+                <div class="left-text">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="right-button">
+                    <button href="/">Sign up</button>
+                </div>
+            </div>
         </div>
         <div class="footer">
             Copyright c The Odin Project 2021
