--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="footer">
-            Copyright c The Odin Project 2021
+            Copyright &#169; The Odin Project 2021
 
         </div>
     </body>
