--- a/index.html
+++ b/index.html
@@ -25,28 +25,27 @@
             </div>
         </div>
         <div class="info">
-            <h2>Lorem, ipsum dolor sit amet consectetur</h2>
+            <h2>Some random information.</h2>
             <div class="item">
                 <div class="square">test</div>
-                <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="item">
                 <div class="square">test</div>
-                <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="item">
                 <div class="square">test</div>
-                <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="item">
                 <div class="square">test</div>
-                <p>adipisicing elit. Laborum quo impedit pariatur eligendi provident, nemo veritatis</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
-
         </div>
         <div class="quote">
-            <div class="quote-text">ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illum ullam repudiandae, officia molestiae veritatis voluptatum, eaque itaque amet esse eum</div>
-            <div class="author">  dolores ratione id quam consequuntur, eius fuga maiores atque.</div>
+            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="author">-Thor, God of Thunder</div>
 
         </div>
         <div class="call">
