Add content to html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 </div>
             </div>
             <div class="first">
-                <h1>Lorem ipsum, dolor sit amet consectetur</h1> 
-                <p>adipisicing elit. Quos, totam esse dolorem illo repudiandae, aspernatur blanditiis ratione quo ullam asperiores optio, ipsa</p>
+                <h1>This website is awesome</h1> 
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button href="/">Sign up</button>
                 <div class="image">this is a placeholder for an image</div>
             </div>
