--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
                 </div>
             </div>
             <div class="first">
-                <h1>This website is awesome</h1> 
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button href="/">Sign up</button>
-                <div class="image">this is a placeholder for an image</div>
+                <div class="first-left">
+                    <h1>This website is awesome</h1> 
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button href="/">Sign up</button>
+                </div>
+                <div class="first-right">
+                    <div class="image">this is a placeholder for an image</div>
+                </div>
+                
             </div>
         </div>
         <div class="info">
