--- a/index.html
+++ b/index.html
@@ -6,67 +6,69 @@
         <title>Landing Page Project</title>
     </head>
     <body>
-        <div class="hero">
-            <div class="header">
-                <div class="logo">Header Logo</div>
-                <div class="links">
-                    <ul>
-                        <li><a href="/">header link one</a></li>
-                        <li><a href="/">header link two</a></li>
-                        <li><a href="/">header link three</a></li>
-                    </ul>
+        <div class="container">
+            <div class="hero">
+                <div class="header">
+                    <div class="logo">Header Logo</div>
+                    <div class="links">
+                        <ul>
+                            <li><a href="/">header link one</a></li>
+                            <li><a href="/">header link two</a></li>
+                            <li><a href="/">header link three</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="first">
+                    <div class="first-left">
+                        <h1>This website is awesome</h1> 
+                        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                        <button href="/">Sign up</button>
+                    </div>
+                    <div class="first-right">
+                        <div class="image">this is a placeholder for an image</div>
+                    </div>
+                    
                 </div>
             </div>
-            <div class="first">
-                <div class="first-left">
-                    <h1>This website is awesome</h1> 
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button href="/">Sign up</button>
+            <div class="info">
+                <h2>Some random information.</h2>
+                <div class="item">
+                    <div class="square">test</div>
+                    <p>this is some subtext under an illustration or image</p>
                 </div>
-                <div class="first-right">
-                    <div class="image">this is a placeholder for an image</div>
+                <div class="item">
+                    <div class="square">test</div>
+                    <p>this is some subtext under an illustration or image</p>
                 </div>
-                
+                <div class="item">
+                    <div class="square">test</div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="item">
+                    <div class="square">test</div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
             </div>
-        </div>
-        <div class="info">
-            <h2>Some random information.</h2>
-            <div class="item">
-                <div class="square">test</div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="item">
-                <div class="square">test</div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="item">
-                <div class="square">test</div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="item">
-                <div class="square">test</div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-        </div>
-        <div class="quote">
-            <div class="quote-text"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></div>
-            <div class="author"><strong>-Thor, God of Thunder</strong></div>
+            <div class="quote">
+                <div class="quote-text"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></div>
+                <div class="author"><strong>-Thor, God of Thunder</strong></div>
 
-        </div>
-        <div class="call">
-            <div class="rectangle">
-                <div class="left-text">
-                    <h3>Call to action! It's time!</h3>
-                    <p>Sign up for our product by clicking that button right over there!</p>
-                </div>
-                <div class="right-button">
-                    <button href="/">Sign up</button>
+            </div>
+            <div class="call">
+                <div class="rectangle">
+                    <div class="left-text">
+                        <h3>Call to action! It's time!</h3>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <div class="right-button">
+                        <button href="/">Sign up</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="footer">
-            Copyright &#169; The Odin Project 2021
+            <div class="footer">
+                Copyright &#169; The Odin Project 2021
 
+            </div>
         </div>
     </body>
 </html>
