--- a/index.html
+++ b/index.html
@@ -32,21 +32,23 @@
             </div>
             <div class="info">
                 <h2>Some random information.</h2>
-                <div class="item">
-                    <div class="square">test</div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="item">
-                    <div class="square">test</div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="item">
-                    <div class="square">test</div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="item">
-                    <div class="square">test</div>
-                    <p>this is some subtext under an illustration or image</p>
+                <div class="items">
+                    <div class="item">
+                        <div class="square">test</div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="item">
+                        <div class="square">test</div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="item">
+                        <div class="square">test</div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="item">
+                        <div class="square">test</div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
                 </div>
             </div>
             <div class="quote">
