--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
                 <h2>Some random information.</h2>
                 <div class="items">
                     <div class="item">
-                        <div class="square">test</div>
+                        <div class="square"></div>
                         <p>this is some subtext under an illustration or image</p>
                     </div>
                     <div class="item">
-                        <div class="square">test</div>
+                        <div class="square"></div>
                         <p>this is some subtext under an illustration or image</p>
                     </div>
                     <div class="item">
-                        <div class="square">test</div>
+                        <div class="square"></div>
                         <p>this is some subtext under an illustration or image</p>
                     </div>
                     <div class="item">
-                        <div class="square">test</div>
+                        <div class="square"></div>
                         <p>this is some subtext under an illustration or image</p>
                     </div>
                 </div>
