--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
                 </div>
             </div>
             <div class="quote">
-                <div class="quote-text"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></div>
-                <div class="author"><strong>-Thor, God of Thunder</strong></div>
+                <div class="quote-container">
+                    <div class="quote-text"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></div>
+                    <div class="author"><strong>-Thor, God of Thunder</strong></div>
+                </div>
 
             </div>
             <div class="call">
